<resources>
    <string name="app_name">Mobilewallet</string>
    <string name="action_menu">Menu</string>
    <string name="action_shops">Shops</string>
    <string name="action_token">Go To Token</string>
    <string name="action_products">Products</string>
    <string name="action_bought_products">Bought Products</string>
    <string name="action_bank_acccount">Bank Account</string>
    <string name="action_server_info">Server</string>
    <string name="action_go_to_wallet">Go to wallet</string>
    <string name="action_notifications">Notifications</string>

    <string name="title_activity_offline_token">OfflineToken</string>
    <string name="title_activity_online_token">OnlineToken</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_qr_code_reader">QrCodeReader</string>
    <string name="no_account_text">Don\'t have an account?</string>
    <string name="account_text">Account</string>
    <string name="no_account_selected_text">No Account Selected</string>
    <string name="register_text">Register</string>
    <string name="unregister_text">Unregister</string>
    <string name="gcm_userid_text">GCM Registration ID:</string>
    <string name="message_text">Message Type:</string>
    <string name="enter_message_text">Enter your message</string>
    <string name="send_message_text">Send</string>
    <string name="text_name">QR code:</string>
    <string name="text_enter_your_name">Enter your name</string>
    <string name="text_user">TODO</string>
    <string name="authorize_purchase">Authorize purchase - %1$.2f€</string>
    <string name="transaction_confirmed">Transaction confirmed</string>
    <string name="transaction_rejected">Transaction rejected</string>
    <string name="identity_confirmation">Identity confirmation</string>
    <string name="confirm_identity">Confirm identity</string>
    <string name="purchase_authorization">Purchase authorization</string>
    <string name="identity_confirmed">Identity confirmed</string>
    <string name="password_hint">Password needs to be at least 6 characters long, contain at least one capital letter and at least one number.</string>

    <string-array name="array_message_actions">
        <item>Echo</item>
        <item>Broadcast</item>
        <item>User Notification</item>
    </string-array>
    <string name="title_activity_device">DeviceActivity</string>
    <string name="title_activity_reg">RegActivity</string>
    <string name="title_activity_transaction">TransactionActivity</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="title_activity_confirm_transaction">ConfirmTransactionActivity</string>
    <string name="title_activity_synchronize">SynchronizeActivity</string>

    <!-- pin dialog strings -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="operation_cancelled">"Operation cancelled</string>
    <string name="enter_pin">Please enter your PIN</string>

    <!-- extras strings -->
    <string name="extra_notificationId">notificationId</string>
    <string name="extra_message">message</string>
    <string name="extra_timestamp">timestamp</string>
    <string name="extra_amount">amount</string>
    <string name="extra_accountNumber">accountNumber</string>
    <string name="extra_paymentId">paymentId</string>
    <string name="extra_guid">guid</string>
    <string name="extra_action">action</string>
    <string name="extra_messageType">messageType</string>

</resources>
