<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <!--<item-->
        <!--android:id="@+id/action_favorite"-->
        <!--android:icon="@drawable/ic_favorite_black_48dp"-->
        <!--android:title="@string/action_favorite"-->
        <!--app:showAsAction="ifRoom"/>-->

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:title="@string/action_menu"
        android:orderInCategory="100"
        app:showAsAction="never">


            <item android:id="@+id/action_token"
              android:title="@string/action_token" />
            <item android:id="@+id/action_shops"
                android:title="@string/action_shops" />
            <item android:id="@+id/action_products"
                android:title="@string/action_products" />
            <item android:id="@+id/action_boughtProducts"
                android:title="@string/action_bought_products" />
            <item android:id="@+id/action_bankAccount"
                android:title="@string/action_bank_acccount" />
            <item android:id="@+id/action_notifications"
                android:title="@string/action_notifications" />
            <item android:id="@+id/action_serverInfo"
                android:title="@string/action_server_info" />



    </item>

    <!--<item android:id="@+id/action_shops"-->
        <!--android:title="@string/action_shops"-->
        <!--app:showAsAction="never"/>-->

</menu>